[package]
name = "siren"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Dependensi Anda yang sudah ada
tokio = { version = "1.28", features = ["io-util", "rt"] }
serde_json = "1.0"
base64 = "0.22"
futures-util = "0.3.28"
pin-project-lite = "0.2"
uuid = "1.8.0"
bytes = "1.4.0"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10"
md-5 = "0.10"
anyhow = "1.0.86"
reqwest = "0.12.5"
regex = "1.11.1"
once_cell = "1.21.3"
pretty-bytes = "0.2.2"

# Dependensi Worker dan Wasm
worker = "0.7.0" 
getrandom = { version = "0.2", features = ["js"] }

# >> PERBAIKAN UTAMA: Tambahkan wasm-bindgen secara eksplisit
# Kita coba versi 0.2.106, yang sesuai dengan skema yang diminta proyek Anda di log error.
# Jika ini gagal karena CLI Anda (worker-build) masih 0.2.105, ganti menjadi "0.2.105".
wasm-bindgen = "0.2.106"


[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
